kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kryptcloud-app
  namespace: default
  labels:
    app: kryptcloud-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: kryptcloud-app
  template:
    metadata:
      labels:
        app: kryptcloud-app
    spec:
      containers:
        - name: app
          # Points to the AWS ECR registry URL that my module creates
          image: kryptcloud-app:1.0 
          ports:
            - containerPort: 3000
          resources:
            limits:
              cpu: "500m"
              memory: "512Mi"
            requests:
              cpu: "250m"
              memory: "256Mi"
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 1001
