kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kryptcloud-app-service
  namespace: default
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
  selector:
    app: kryptcloud-app
